# divergent-beams

./: LICENSE  README.md
demo/config/: README.md  start.sh
demo/server/: Environment.py  InferenceTensor.py  main.py  requirements.txt
demo/server/config/: README.md  divergent-beams.caddy  gunicorn.service  start.sh
demo/ui/: index.html  package-lock.json  package.json  vite.config.ts
demo/ui/src/: App.css  App.tsx  GenLevel.tsx  GeneratingMenu.tsx  Generation.tsx  Generations.tsx  Hint.tsx  PromptInput.tsx
divergent-beams/: pyproject.toml
divergent_beams/: pyproject.toml
divergent_beams/divergent_beams/: algo.py
exploration/: .gitignore  InferenceTensor.py  dev-inference-tensor.ipynb  fast-candidates.ipynb  fuzz-testing-diversity.ipynb  fuzz-testing-local.ipynb  fuzz-testing.ipynb  setup.sh
inference_server/: main.py
server/: .gitignore  Clustering.py  InferenceTensor.py  env.py  inference.py  main.py  server.py
tool/: package.json  pyproject.toml
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.tsx  GenLevel.tsx  GenNode.tsx  GenTree.css  GenTree.tsx  GeneratingMenu.tsx  Generation.tsx  Generations.tsx  Hint.tsx  PromptInput.tsx  TreeView.css  TreeView.tsx  index.css  types.tsx  utils.ts
