[tool.poetry]
name = "divergent-beams"
version = "0.1.0"
description = "A library for sampling diverse outputs from an LLM's probability space."
authors = ["Aaron Johnston <aaron.johnston001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.42.2"
torch = {version = "2.0.1", source = "torch118"}
torchmetrics = "^1.4.0"
scikit-learn = "^1.5.0"


[[tool.poetry.source]]
name = "torch118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
