[tool.poetry]
name = "phuzzy"
version = "0.1.0"
description = ""
authors = ["Aaron Johnston <aaron.johnston001@gmail.com>"]
license = "UNLICENSED"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.41.1"
accelerate = "^0.30.1"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
